--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <!--Added new script source for db.js-->
+  <script src="db.js"></script>
   <script src="index.js"></script>
+  
 </body>
 </html>
